# vla-sweeping-controller

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
models/: sweeping_scene.xml  ur5e.xml
scripts/: consumer.py
src/: controller.cpp  controller.h  ipc_common.h  main.cpp
